@@ -27,6 +27,7 @@ import org.slf4j.LoggerFactory;
 import org.apache.cassandra.io.FSError;
 import org.apache.cassandra.io.FSReadError;
 import org.apache.cassandra.io.util.FileUtils;
+import org.apache.cassandra.utils.FBUtilities;
 import org.apache.cassandra.utils.NativeLibrary;
 
 /**
@@ -50,7 +51,7 @@ final class LogReplica implements AutoCloseable
     static LogReplica create(File folder, String fileName)
     {
         int folderFD = NativeLibrary.tryOpenDirectory(folder.getPath());
-        if (folderFD == -1)
+        if (folderFD == -1 && !FBUtilities.isWindows())
             throw new FSReadError(new IOException(String.format("Invalid folder descriptor trying to create log replica %s", folder.getPath())), folder.getPath());
 
         return new LogReplica(new File(fileName), folderFD);
@@ -59,7 +60,7 @@ final class LogReplica implements AutoCloseable
     static LogReplica open(File file)
     {
         int folderFD = NativeLibrary.tryOpenDirectory(file.getParentFile().getPath());
-        if (folderFD == -1)
+        if (folderFD == -1 && !FBUtilities.isWindows())
             throw new FSReadError(new IOException(String.format("Invalid folder descriptor trying to create log replica %s", file.getParentFile().getPath())), file.getParentFile().getPath());
 
         return new LogReplica(file, folderFD);
